# wavegen-demo

./: README.md  netlify.toml  package-lock.json  package.json  vite.config.js
rust/: Cargo.toml
rust/src/: lib.rs
src/: app.css  app.html  types.ts
src/components/: App.svelte  Chart.svelte  Component.svelte  Components.svelte  Controls.svelte
src/routes/: index.svelte
wavegen-wasm/: Cargo.toml
