[package]
name = "wavegen-wasm"
description = "WASM bindings for wavegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wavegen = { version = "0.2.0", defalt-feautres = false, features = ["libm"] }
